fix: stopped boxes stretching to fit container - merchant page

--- a/global.css
+++ b/global.css
@@ -26,7 +26,7 @@ section {
 .separator {
   border-top: 1px solid #eeeeee;
   height: 1px;
-  margin: 1.5rem 0;
+  margin: 1em 0;
 }
 
 .button {
