--- a/src/components/MerchantPage/Hero/style.css
+++ b/src/components/MerchantPage/Hero/style.css
@@ -5,18 +5,24 @@
       20% 0% / cover fixed no-repeat url('../../../assets/planets_hero.svg'),
       linear-gradient(to right, #0e122a 0%, #4d3293 100%);
     width: 100%;
-    min-height: 250px;
+    min-height: 300px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 2em 0 0 0;
   }
 
   .merchant-hero .container {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    align-items: center;
+  }
+
+  .merchant-left-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
   }
 
@@ -76,7 +82,6 @@
     background: white;
   }
 
-
   .merchant-hero-site {
     display: flex;
     justify-content: center;
@@ -108,7 +113,10 @@
   .merchant-hero-site a::hover {
     text-decoration: underline;
   }
-  
+
+  .merchant-mascot {
+    display: none;
+  }
 } /* Define mobile styles - Mobile First */
 
 @media only screen and (max-width: 40em) {
@@ -121,7 +129,6 @@
       linear-gradient(to right, #0e122a 0%, #4d3293 100%);
     width: 100%;
     min-height: 350px;
-    flex-direction: column;
     justify-content: space-between;
   }
 
@@ -146,7 +153,6 @@
     margin: 0;
     text-transform: uppercase;
   }
-
 
   .tab {
     padding: 0.5em 1.5em;
@@ -173,9 +179,14 @@
   .merchant-hero .container {
     flex-direction: row;
     align-items: center;
-    justify-content: flex-start;
-    padding: 3em 0 0 0;
+    justify-content: space-between;
+  }
 
+  .merchant-left-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
   }
 
   .merchant-hero-logo {
@@ -195,6 +206,17 @@
     margin-left: 20px;
     align-items: flex-start;
   }
+
+  .merchant-mascot {
+    display: inline-block;
+  }
+
+  .merchant-mascot img {
+    max-width: 350px;
+    position: relative;
+    bottom: -50px
+
+  }
 } /* min-width 1025px, large screens */
 
 @media only screen and (min-width: 64.063em) and (max-width: 90em) {
@@ -202,7 +224,6 @@
 
 /* XLarge screens */
 @media only screen and (min-width: 90.063em) {
-
 } /* min-width 1441px, xlarge screens */
 
 @media only screen and (min-width: 90.063em) and (max-width: 120em) {
