--- a/src/components/MerchantPage/MerchantMarkdown/merchantMarkdown.module.css
+++ b/src/components/MerchantPage/MerchantMarkdown/merchantMarkdown.module.css
@@ -1,7 +1,7 @@
 .merchantMarkdown {
     background: white;
     border-radius: 10px;
-    padding: 2%;
+    padding: 1em;
     margin: 1em 0;
 }
 
