--- a/src/components/OfferBox/FeaturedOffer/style.css
+++ b/src/components/OfferBox/FeaturedOffer/style.css
@@ -65,8 +65,8 @@
 .button-redeem {
   border-radius: 50%;
   background: url('../../../assets/arrow_right.svg') no-repeat center, linear-gradient(to right, #ff2882, #ff2882);
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
 
   right: -0.5em;
   bottom: 1em;
