--- a/src/templates/MerchantPage/merchantPage.css
+++ b/src/templates/MerchantPage/merchantPage.css
@@ -9,6 +9,7 @@
 
   .merchant-offer-content .container {
     flex-direction: column;
+    align-items: flex-start;
   }
 
   .offers-list {
